# prep-plugins

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  go_shim.in
src/: CMakeLists.txt
src/apt/: CMakeLists.txt  main
src/archive/: main  manifest.json.in
src/autotools/: main
src/cmake/: main
src/git/: CMakeLists.txt  main  manifest.json.in
src/github.com/: CMakeLists.txt
src/github.com/ryjen/: CMakeLists.txt
src/github.com/ryjen/prep-plugins/: CMakeLists.txt
src/github.com/ryjen/prep-plugins/apt/: main.go
src/github.com/ryjen/prep-plugins/archive/: CMakeLists.txt  archive_test.go  main.go  main_test.go  manifest.json.in
src/github.com/ryjen/prep-plugins/autotools/: CMakeLists.txt  autotools_test.go  main.go  main_test.go  manifest.json.in
src/github.com/ryjen/prep-plugins/cmake/: CMakeLists.txt  main.go  main_test.go  main_test.go.in  manifest.json.in
src/github.com/ryjen/prep-plugins/git/: CMakeLists.txt  main.go  main_test.go  manifest.json.in
src/github.com/ryjen/prep-plugins/homebrew/: main.go  manifest.json.in
src/github.com/ryjen/prep-plugins/make/: CMakeLists.txt  main.go  main_test.go  manifest.json.in
src/github.com/ryjen/prep-plugins/support/: CMakeLists.txt  manifest.json.in  plugin.go
src/homebrew/: main
src/make/: main
src/support/: CMakeLists.txt  main.go  manifest.json.in  plugin
tests/: CMakeLists.txt  suite.bats
tests/apt/: CMakeLists.txt  main.bats
tests/archive/: CMakeLists.txt  main.bats
tests/autotools/: CMakeLists.txt  main.bats
tests/cmake/: CMakeLists.txt  main  main.bats
tests/data/: build_input.txt  load_input.txt  resolver_input.txt
tests/data/autotools/: Makefile.in  autogen.sh  configure  configure.ac
tests/data/cmake/: CMakeLists.txt
tests/data/make/: Makefile
tests/git/: CMakeLists.txt  main  main.bats
tests/homebrew/: CMakeLists.txt  main  main.bats
tests/make/: CMakeLists.txt  main.bats
tests/methods/: add  build  resolver
tests/support/: lib.bash  plugin_test
